# facompbot

./: .gitignore  README.md  main.py  pyproject.toml
src/facompbot/: __init__.py  agent.py  agents_factory.py  config.py  document_tools.py  events.py  memory.py  orchestrator.py  prompts.py  runner.py
